--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,15 @@ title: Ping's blog
 description: Something
 url: "https://blog.pingwu.me"
 user: "Ping"
+baseurl: /
+permalink: /:title
+paginate: 3
+paginate_path: /page/:num/
+future: true
 plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
 exclue:
   - README.md
-permalink: /:year/:month/:day/:title
 theme: jekyll-theme-hacker
